--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "i18next": "^22.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "redux-persist": "^6.0.0"
